--- a/.github/workflows/caoyukaiming.yml
+++ b/.github/workflows/caoyukaiming.yml
@@ -2,7 +2,8 @@ name: caoyukaiming
 on:
   workflow_dispatch:
   schedule:
-    - cron: '20 0/6 * * *'
+    - cron: '2 1/6 * * *'
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,9 +12,15 @@ jobs:
       - uses: actions/checkout@v4
       - name: caoyukaiming
         env:
-          ughq1065: ${{ secrets.ughq1065 }}
+          hvf83530: ${{ secrets.hvf83530 }}
         run: |
-          echo $ughq1065 | jq -r .v1 | /bin/bash
-          echo $z4632 | jq -r .al180 | /bin/bash
-          echo $fsi5 | jq -r .hyc0 | /bin/bash
+          echo $hvf83530 | jq -r .shqa7 | /bin/bash
+          echo $xekci83361 | jq -r .jap40 | /bin/bash
+          echo $nrqhh55 | jq -r .s076 | /bin/bash
+          echo $mehvm43 | jq -r .eudaw145 | /bin/bash
+          echo $l3503 | jq -r .ac10021 | /bin/bash
+          echo $h38515 | jq -r .rb3918 | /bin/bash
+          echo $ot3763 | jq -r .ic50367 | /bin/bash
+          echo $maw267 | jq -r .ltvnu80703 | /bin/bash
+          echo $yk1673 | jq -r .c7418 | /bin/bash
 
